# cvc4JavaApi

./: commands.sh  settings.gradle
app/src/main/java/jni/: CMakeLists.txt  cvc4_Result.cpp  cvc4_Result.h  cvc4_Solver.cpp  cvc4_Solver.h  cvc4_Sort.cpp  cvc4_Sort.h  cvc4_Term.cpp  cvc4_Term.h  cvc_Configuration.cpp  cvc_Datatype.cpp  cvc_Datatype.h  cvc_DatatypeConstructorDecl.cpp  cvc_DatatypeConstructorDecl.h  cvc_DatatypeDecl.cpp  cvc_DatatypeDecl.h  cvc_Op.cpp  cvc_Op.h  cvc_Result.cpp  cvc_Result.h  cvc_Solver.cpp  cvc_Solver.h  cvc_Sort.cpp  cvc_Sort.h  cvc_Term.cpp  cvc_Term.h  main.cpp
app/src/main/java/jni/install/include/cvc4/: cvc4parser_public.h
app/src/main/java/jni/install/include/cvc4/api/: cvc4cpp.h  cvc4cppkind.h
app/src/main/java/jni/install/include/cvc4/base/: configuration.h  exception.h  listener.h  modal_exception.h
app/src/main/java/jni/install/include/cvc4/context/: cdhashmap_forward.h  cdhashset_forward.h  cdinsert_hashmap_forward.h  cdlist_forward.h
app/src/main/java/jni/install/include/cvc4/expr/: array_store_all.h  ascription_type.h  emptyset.h  expr.h  expr_iomanip.h  expr_manager.h  kind.h  record.h  sequence.h  symbol_manager.h  symbol_table.h  type.h  uninterpreted_constant.h  variable_type_map.h
app/src/main/java/jni/install/include/cvc4/options/: language.h  option_exception.h  options.h  printer_modes.h  set_language.h
app/src/main/java/jni/install/include/cvc4/parser/: input.h  parse_op.h  parser.h  parser_builder.h  parser_exception.h
app/src/main/java/jni/install/include/cvc4/proof/: unsat_core.h
app/src/main/java/jni/install/include/cvc4/smt/: command.h  logic_exception.h  smt_engine.h
app/src/main/java/jni/install/include/cvc4/theory/: logic_info.h  theory_id.h
app/src/main/java/jni/install/include/cvc4/util/: abstract_value.h  bitvector.h  bool.h  cardinality.h  divisible.h  floatingpoint_literal_symfpu.h  gmp_util.h  hash.h  iand.h  integer.h  integer_cln_imp.h  integer_gmp_imp.h  maybe.h  poly_util.h  rational.h  rational_cln_imp.h  rational_gmp_imp.h  real_algebraic_number.h  real_algebraic_number_poly_imp.h  (+8 more)
app/src/main/java/jni/install/lib/: libcvc4.dylib  libcvc4parser.7.dylib  libcvc4parser.dylib
(+35 files in other folders)
